--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Home work 03</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts">
 </head>
+
 <body>
-    <h1>It's fine day</h1>
+   <header class="main-header">
+       <nav class="nav">
+            <ul class="menu">
+              <li class="menu-item"><a href="#" class="menu-link">lifestyle</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">photodiary</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">music</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">travel</a></li>
+            </ul>
+        </nav>
+   </header>
+   <main class="main-content">
+      <section class="pictures-blok"> 
+          <ul class="pictures-blok-list">
+           <li class="pictures-blok-list-item">
+               <img src="img/image-1.jpg" alt="Dancing girl" width="420" height="280">
+               <p class="subtitle">lifestyle</p>
+               <h2 class="pictures-blok-title">More than just a music festival</h2>
+               <p class="text">Lorem ipsum dolor sit amet? consectetur adipisicing elit, set do ciusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ad minim veniam, quis nostrud exercitationullamco laboris.</p>
+           </li>
+           <li class="pictures-blok-list-item">
+                <img src="img/image-2.jpg" alt="The cup of coffee" width="420" height="280">
+                <p class="subtitle">lifestyle</p>
+                <h2 class="pictures-blok-title">Life tastes better with coffe</h2>
+                <p class="text">Lorem ipsum dolor sit amet? consectetur adipisicing elit, set do ciusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ad minim veniam, quis nostrud exercitationullamco laboris.</p>
+           </li>
+           <li class="pictures-blok-list-item">
+                <img src="img/image-3.jpg" alt="two girls and a bridge" width="420" height="280">
+                <p class="subtitle">photodiary</p>
+                <h2 class="pictures-blok-title">American dream</h2>
+                <p class="text">Lorem ipsum dolor sit amet? consectetur adipisicing elit, set do ciusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ad minim veniam, quis nostrud exercitationullamco laboris.</p>
+           </li>
+           <li class="pictures-blok-list-item">
+                <img src="img/image-4.jpg" alt="the boy in the hat" width="420" height="280">
+                <p class="subtitle">photodiary</p>
+                <h2 class="pictures-blok-title">A day exploring the Alps</h2>
+                <p class="text">Lorem ipsum dolor sit amet? consectetur adipisicing elit, set do ciusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ad minim veniam, quis nostrud exercitationullamco laboris.</p>
+           </li>
+           <li class="pictures-blok-list-item">
+                <img src="img/image-5.jpg" alt="the girl in the hat" width="420" height="280">
+                <p class="subtitle">lifestyle</p>
+                <h2 class="pictures-blok-title">Top 10 song for running</h2>
+                <p class="text">Lorem ipsum dolor sit amet? consectetur adipisicing elit, set do ciusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ad minim veniam, quis nostrud exercitationullamco laboris.</p>
+           </li>
+           <li class="pictures-blok-list-item">
+                <img src="img/image-6.jpg" alt="the road" width="420" height="280">
+                <p class="subtitle">lifestyle</p>
+                <h2 class="pictures-blok-title">Cold winter days</h2>
+                <p class="text">Lorem ipsum dolor sit amet? consectetur adipisicing elit, set do ciusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ad minim veniam, quis nostrud exercitationullamco laboris.</p>
+           </li>
+       </ul>
+    </section>
+    <button class="button">Load more</button>
+   </main>
+   
 </body>
 </html>
