--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -7,7 +7,7 @@
      <title>Home work 04</title>
      <link rel="stylesheet" href="css/normalize.css">
      <link rel="stylesheet" href="css/styles.css"> 
-     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:300,400,900" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/cssfamily=Open+Sans:400,600,700,Roboto:300,400,900" rel="stylesheet">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
                 </div>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/remen black.png" alt="ремень черный" width="255" height="285">
+                <img class="fons" src="img/remen-black.png" alt="ремень черный" width="255" height="285">
                 <div class="subtitle-and-price">
                     <p class="subtitle">woman shirt</p>
                     <p class="price">31$</p>
@@ -93,10 +93,10 @@
        </ul>
        <div class="clr"></div>
     </section>
-</div> 
+    </main>
 <div class="second block">
     <div class="caption"><h2>Latest news</h2><span class="caption-line"></span></div>
-        <main class="main-second-content">
+
             <section class="second-pictures-block"> 
                 <ul class="second-pictures-block-list">
                     <li class="second-pictures-block-item">
@@ -123,7 +123,7 @@
                 </ul> 
                 <div class="clr"></div> 
             </section>
-        </main>
+      </div>
 </div> 
 </body>
 </html>
