finish 5 home work

--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -28,80 +28,107 @@
             </ul>
         </nav>
    </header>
-   <div class="thirst block">
     <main class="container">
      <div class="slider-picture">
          <img class="slider" src="img/slaider.png" alt="Four girls" width="1600" height="600">
-         <h2 class="slider-capture">AFFORDABLE PARIS TOURS</h2>
-         <p class="slider-under">CITY TOURS / TOUR TICKETS / TOUR GUID</p>
-        <div class="slider-arrow"><img src="img/arrow-lef.png" alt="arrow-left" width="22" height="38"></div>
-        <div class="slider-arrow"><img src="img/arrow-right.png" alt="arrow-right" width="22" height="38"></div>
+         <div class="slider-text">
+            <h2 class="slider-capture">AFFORDABLE PARIS TOURS</h2>
+            <p class="slider-under">CITY TOURS / TOUR TICKETS / TOUR GUID</p>
+        </div>
+         <div class="slider-arrow-left">
+            <div class="slider-arrow"></div>
+            <div class="slider-arrow-background"></div>
+        </div>
+        <div class="slider-arrow-right">
+            <div class="slider-arrow"></div>
+            <div class="slider-arrow-background"></div>
+        </div>
+        <div class="slider-fon"></div>
     </div>
     <section>
     <div class="caption"><h2>NEW COLLECTION<span class="caption-line"></span></h2></div>
       <ul class="pictures-block-list">
         <li class="pictures-block-list-item">
-            <img class="people" src="img/blue-tshirt.png" alt="boy in blue tshirt" width="255" height="324">
+            <div class="overlay">
+                <img class="people" src="img/blue-tshirt.png" alt="boy in blue tshirt" width="255" height="324">
                 <div class="subtitle-and-price">
                     <p class="subtitle">blue tshirt</p>
                     <p class="price">$26</p>
-                    <div class="pictures-fon">Black box</div>
+                </div>
+                <div class="controls-block">
+                    <div class="pictures-fon"></div>
                     <div class="many-buttons">
-                        <button class="button-list"><img src="img/hart.png" alt="hart-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/strelki.png" alt="strelki-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/clock.png" alt="clock-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/telegka.png" alt="telegka-like" width="50" height="50"> <span class="add-to-cart">add to cart</span></button>
+                        <button class="button-list button-hart"></button>
+                        <button class="button-list button-strelki"></button>
+                        <button class="button-list button-clock"></button>
+                    </div>
+                    <div><button class="button-list-2"><span class="add-to-cart">add to cart</span></button>
                     </div>
                 </div>
+            </div>
         </li>
         <li class="pictures-block-list-item">
-            <img class="people" src="img/woman-shirt.png" alt="girl in shirt" width="255" height="324">
+            <div class="overlay">
+                <img class="people" src="img/woman-shirt.png" alt="woman in shirt" width="255" height="324">
                 <div class="subtitle-and-price">
                     <p class="subtitle">woman shirt</p>
                     <p class="price">$31</p>
-                    <div class="pictures-fon">Black box</div>
+                </div>
+                <div class="controls-block">
+                    <div class="pictures-fon"></div>
                     <div class="many-buttons">
-                        <button class="button-list"><img src="img/hart.png" alt="hart-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/strelki.png" alt="strelki-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/clock.png" alt="clock-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/telegka.png" alt="telegka-like" width="50" height="50"> <span class="add-to-cart">add to cart</span></button>
+                        <button class="button-list button-hart"></button>
+                        <button class="button-list button-strelki"></button>
+                        <button class="button-list button-clock"></button>
+                    </div>
+                    <div><button class="button-list-2"><span class="add-to-cart">add to cart</span></button>
                     </div>
                 </div>
+            </div>
         </li>
         <li class="pictures-block-list-item">
-            <img class="people" src="img/yellow-tshirt.png" alt="boy in yellow tshirt" width="255" height="324">
+            <div class="overlay">
+                <img class="people" src="img/yellow-tshirt.png" alt="boy in yellow tshirt" width="255" height="324">
                 <div class="subtitle-and-price">
                     <p class="subtitle">yellow tshirt</p>
                     <p class="price">$21</p>
-                    <div class="pictures-fon">Black box</div>
+                </div>
+                <div class="controls-block">
+                    <div class="pictures-fon"></div>
                     <div class="many-buttons">
-                        <button class="button-list"><img src="img/hart.png" alt="hart-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/strelki.png" alt="strelki-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/clock.png" alt="clock-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/telegka.png" alt="telegka-like" width="50" height="50"> <span class="add-to-cart">add to cart</span></button>
+                        <button class="button-list button-hart"></button>
+                        <button class="button-list button-strelki"></button>
+                        <button class="button-list button-clock"></button>
+                    </div>
+                    <div><button class="button-list-2"><span class="add-to-cart">add to cart</span></button>
                     </div>
                 </div>
+            </div>
         </li>
         <li class="pictures-block-list-item">
-            <img class="people" src="img/cool-lingerie.png" alt="girl in cool lingerie" width="255" height="324">
+            <div class="overlay">
+                <img class="people" src="img/cool-lingerie.png" alt="woman in cool-lingerie" width="255" height="324">
                 <div class="subtitle-and-price">
                     <p class="subtitle">cool lingerie</p>
                     <p class="price">$56</p>
-                    <div class="pictures-fon">Black box</div>
+                </div>
+                <div class="controls-block">
+                    <div class="pictures-fon"></div>
                     <div class="many-buttons">
-                        <button class="button-list"><img src="img/hart.png" alt="hart-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/strelki.png" alt="strelki-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/clock.png" alt="clock-like" width="50" height="50"></button>
-                        <button class="button-list"><img src="img/telegka.png" alt="telegka-like" width="50" height="50"> <span class="add-to-cart">add to cart</span></button>
+                        <button class="button-list button-hart"></button>
+                        <button class="button-list button-strelki"></button>
+                        <button class="button-list button-clock"></button>
+                    </div>
+                    <div><button class="button-list-2"><span class="add-to-cart">add to cart</span></button>
                     </div>
                 </div>
-        </li> 
+            </div>
+        </li>
       </ul>
     </section>   
-    </main> 
-  </div> 
+    </main>
 <footer>
-    <div class="footer-text>"> Rights Reserved  Dokan  Designed ThemenGraph></div>
+    <div class="footer-fon">All Rights Reserved &copy; Dokan | Designed <a href="#">ThemenGraph</a></div>
 </footer>
 </body>  
 </html>
