--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="navigation">
             <ul class="site-navigation">
-              <li class="site-item site-item-active"><a href="">home</a></li>
+              <li class="site-item"><a href="">home</a></li>
               <li class="site-item"><a href="">about us</a></li>
               <li class="site-item"><a href="">page</a></li>
               <li class="site-item"><a href="">shop</a></li>
@@ -35,63 +35,79 @@
       <section class="pictures-block"> 
           <ul class="pictures-block-list">
             <li class="pictures-block-list-item">
-               <img class="fons" src="img/tuflya.png" alt="Туфли женские" width="255" height="285">
-               <div class="subtitle-and-price">
-                    <p class="subtitle">blue tshirt</p>
-                    <p class="price">26$</p>
-                </div>
+                <a href="#">
+                    <img class="fons" src="img/tuflya.png" alt="Туфли женские" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">blue tshirt</p>
+                        <p class="price">26$</p>
+                    </div>
+                </a>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/remen.png" alt="Ремень коричневый" width="255" height="285">
-                <div class="subtitle-and-price">
-                    <p class="subtitle">woman shirt</p>
-                    <p class="price">31$</p>
-                </div>
+                <a href="#">
+                    <img class="fons" src="img/remen.png" alt="Ремень коричневый" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">woman shirt</p>
+                        <p class="price">31$</p>
+                    </div>
+                </a>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/shlyapa.png" alt="Шляпа" width="255" height="285">
-                <div class="subtitle-and-price">
-                    <p class="subtitle">yellow tshirt</p>
-                    <p class="price">21$</p>
-                </div>
+                 <a href="#">
+                    <img class="fons" src="img/shlyapa.png" alt="Шляпа" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">yellow tshirt</p>
+                        <p class="price">21$</p>
+                    </div>
+                </a>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/sumka-blue.png" alt="Сумочка синяя" width="255" height="285">
-                <div class="subtitle-and-price">
-                    <p class="subtitle">cool lingerie</p>
-                    <p class="price">56$</p>
-                </div>
+                <a href="#">
+                    <img class="fons" src="img/sumka-blue.png" alt="Сумочка синяя" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">cool lingerie</p>
+                        <p class="price">56$</p>
+                    </div>
+                    </a>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/sumka.png" alt="сумка черная" width="255" height="285">
-                <div class="subtitle-and-price">
-                    <p class="subtitle">blue tshirt</p>
-                    <p class="price">26$</p>
-                </div>
+                <a href="#">
+                    <img class="fons" src="img/sumka.png" alt="сумка черная" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">blue tshirt</p>
+                        <p class="price">26$</p>
+                    </div>
+                </a>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/remen-black.png" alt="ремень черный" width="255" height="285">
-                <div class="subtitle-and-price">
-                    <p class="subtitle">woman shirt</p>
-                    <p class="price">31$</p>
-                </div>
+                <a href="#">
+                    <img class="fons" src="img/remen-black.png" alt="ремень черный" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">woman shirt</p>
+                        <p class="price">31$</p>
+                    </div>
+                </a>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/tufli-muzg.png" alt="Туфли мужские" width="255" height="285">
-                <div class="subtitle-and-price">
-                    <p class="subtitle">yellow tshirt</p>
-                    <p class="price">21$</p>
-                </div>
+                <a href="#">
+                    <img class="fons" src="img/tufli-muzg.png" alt="Туфли мужские" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">yellow tshirt</p>
+                        <p class="price">21$</p>
+                    </div>
+                </a>
             </li>
             <li class="pictures-block-list-item">
-                <img class="fons" src="img/ochki.png" alt="Очки женские" width="255" height="285">
-                <div class="subtitle-and-price">
-                    <p class="subtitle">cool lingerie</p>
-                    <p class="price">56$</p>
-                </div>
+                <a href="#">
+                    <img class="fons" src="img/ochki.png" alt="Очки женские" width="255" height="285">
+                    <div class="subtitle-and-price">
+                        <p class="subtitle">cool lingerie</p>
+                        <p class="price">56$</p>
+                    </div>
+                </a>
             </li>
+            <li class="clr"></li>
        </ul>
-       <div class="clr"></div>
     </section>
     </main>
 <div class="second block">
@@ -120,8 +136,8 @@
                         <p class="subtitle-second">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic sed architecto qui? Suscipit minima voluptate fugiat, voluptatem ex est cum debitis facere. Quaerat, voluptatibus omnis.</p>
                         <a class="button">Read more</a>
                     </li>
-                </ul> 
-                <div class="clr"></div> 
+                    <li class="clr"></li>
+                </ul>
             </section>
       </div>
 </div> 
