--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="navigation">
             <ul class="site-navigation">
-              <li class="site-item site-item-active"><a href="">home</a></li>
+              <li class="site-item"><a href="">home</a></li>
               <li class="site-item"><a href="">about us</a></li>
               <li class="site-item"><a href="">page</a></li>
               <li class="site-item"><a href="">shop</a></li>
@@ -28,9 +28,10 @@
             </ul>
         </nav>
    </header>
-    <main class="container">
+    <main>
      <div class="slider-picture">
-         <img class="slider" src="img/slaider.png" alt="Four girls" width="1600" height="600">
+         <div class="slider-img"></div>
+         
          <div class="slider-text">
             <h2 class="slider-capture">AFFORDABLE PARIS TOURS</h2>
             <p class="slider-under">CITY TOURS / TOUR TICKETS / TOUR GUID</p>
