--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -9,77 +9,73 @@
     <title>Home work 06</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css"> 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700;Roboto:300,400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script;Montserrat:400,700;Roboto:300i,400" rel="stylesheet">
 </head>
 
 <body>
     <header class="page-header">
+        <nav class="page-nav-container">
          <div class="logo">
-             <a href="#">
-                 <h1>MoGo</h1>
-             </a>
+             <a href="#"class="site-logo">MoGo</a>
          </div>
-         <nav class="navigation">
              <ul class="site-navigation">
                <li class="site-item site-item-active"><a href="">about</a></li>
                <li class="site-item"><a href="">service</a></li>
                <li class="site-item"><a href="">work</a></li>
                <li class="site-item"><a href="">blog</a></li>
-               <li class="site-item"><a href="">contakt</a></li>
+               <li class="site-item"><a href="">contact</a></li>
              </ul>
-         </nav>
+        </nav>
     </header>
 
     <main class="item-block">
-        <p class="capture-1">we work with</p>
+        <p class="capture-1">We work with</p>
         <p class="capture-2">amazing services</p>
         <span class="caption-line"></span>
+
+
         <ul class="icon-list">
-            <li class="icons">
-                <img class="icon-png" src="img/alarm.png" alt="clock" width="32" height="32">
-                <p class="capture-block">Photography</p>
-                <p class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</p>
+            <li class="features-list-item icon-alarm">
+                 <div class="icon-list-capture">Photography</div>
+                 <div class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icons">
-                <img class="icon-png" src="img/line-graphe.png" alt="line" width="32" height="32">
-                <p class="capture-block">Web Design</p>
-                <p class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</p>
+            <li class="features-list-item icon-line-graphe">
+                <div class="icon-list-capture">Web Design</div>
+                <div class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icons">
-                <img class="icon-png" src="img/computer.png" alt="computer" width="32" height="32">
-                <p class="capture-block">Creativity</p>
-                <p class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</p>
+            <li class="features-list-item icon-computer">
+                <div class="icon-list-capture">Creativity</div>
+                <div class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icons">
-                <img class="icon-png" src="img/book2.png" alt="book" width="32" height="32">
-                <p class="capture-block">SEO</p>
-                <p class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</p>
+            <li class="features-list-item icon-book2">
+                <div class="icon-list-capture">SEO</div>
+                <div class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icons">
-                <img class="icon-png" src="img/home.png" alt="home" width="32" height="32">
-                <p class="capture-block">CSS/HTML</p>
-                <p class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</p>
+            <li class="features-list-item icon-home">
+                <div class="icon-list-capture">CSS/HTML</div>
+                <div class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icons">
-                <img class="icon-png" src="img/image.png" alt="image" width="32" height="32">
-                <p class="capture-block">Digital</p>
-                <p class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</p>
+            <li class="features-list-item icon-image">
+                <div class="icon-list-capture">Digital</div>
+                <div class="text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
         </ul>
-        <p class="capture-1">who we are</p>
+        <p class="capture-1">Who we are</p>
         <p class="capture-2">meet our team</p>
         <span class="caption-line"></span>
         <div class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet incidunt ipsum soluta sunt accusantium aliquam quos quia, quas necessitatibus consectetur dolore accusamus ex provident cum cumque ut libero corrupti.</div>
         <ul class="team">
             <li class="card-boys">
-                <div class="card-boys-foto"><img src="img/men-1.png" alt="man thirst" width="380" height="470"></div>
                 <div class="card-fon"></div>
-                <div class="card-gradient"></div>
-                <div class="many-buttons">
-                    <button class="button-list button-facebook"></button>
-                    <button class="button-list button-twitter"></button>
-                    <button class="button-list button-pinterest"></button>
-                    <button class="button-list button-instagram"></button>
+                <div class="card-boys-foto"><img src="img/men-1.png" alt="man thirst" width="380" height="470"></div>
+                <div class="card-content">
+                    <div class="card-gradient"></div>
+                    <div class="many-buttons">
+                        <a href="#" class="button-list button-facebook"></a>
+                        <a href="#" class="button-list button-twitter"></a>
+                        <a href="#" class="button-list button-pinterest"></a>
+                        <a href="#" class="button-list button-instagram"></a>
+                    </div>
                 </div>
                 <p class="man-name">Matthew Dix</p>
                 <p class="profession">Graphik Design</p>
@@ -87,26 +83,30 @@
             <li class="card-boys">
                 <div class="card-boys-foto"><img src="img/men-2.png" alt="man second" width="380" height="470"></div>
                 <div class="card-fon"></div>
-                <div class="card-gradient"></div>
-                <div class="many-buttons">
-                    <button class="button-list button-facebook"></button>
-                    <button class="button-list button-twitter"></button>
-                    <button class="button-list button-pinterest"></button>
-                    <button class="button-list button-instagram"></button>
-                </div>
+                <div class="card-content">
+                    <div class="card-gradient"></div>
+                    <div class="many-buttons">
+                        <a href="#" class="button-list button-facebook"></a>
+                        <a href="#" class="button-list button-twitter"></a>
+                        <a href="#" class="button-list button-pinterest"></a>
+                        <a href="#" class="button-list button-instagram"></a>
+                    </div>
+                    </div>
                 <p class="man-name">Christopher Campbell</p>
                 <p class="profession">Branding/UX design</p>
             </li>
             <li class="card-boys">
                 <div class="card-boys-foto"><img src="img/men-3.png" alt="man third" width="380" height="470"></div>
                 <div class="card-fon"></div>
-                <div class="card-gradient"></div>
-                <div class="many-buttons">
-                    <button class="button-list button-facebook"></button>
-                    <button class="button-list button-twitter"></button>
-                    <button class="button-list button-pinterest"></button>
-                    <button class="button-list button-instagram"></button>
-                </div>
+                <div class="card-content">
+                        <div class="card-gradient"></div>
+                        <div class="many-buttons">
+                            <a href="#" class="button-list button-facebook"></a>
+                            <a href="#" class="button-list button-twitter"></a>
+                            <a href="#" class="button-list button-pinterest"></a>
+                            <a href="#" class="button-list button-instagram"></a>
+                        </div>
+                        </div>
                 <p class="man-name">Michael Fertig</p>
                 <p class="profession">Developer</p>
             </li>
@@ -115,10 +115,9 @@
 </body>
 
 <footer>
+    <div class="footer-content">
     <div class="footer-fon">&copy; 2016 MoGo free PSD template by <a href="#">Laaqiq</a></div>
-    <div class="subscribe-text">Your Email</div>
-    <button class="rectangle">subscribe</button>
-      
-
+    <div class="subscribe-text"><input type="text" value="Your Email"><button class="rectangle">subscribe</button></div>
+    </div>
 </footer>
 </html>
