--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -26,46 +26,50 @@
                <li class="site-navigation__item-search"><a class="icon-MAGNIFYINGGLASS icon-MAGNIFYINGGLASS-dims" href="#"></a></li>
              </ul>
         </nav>
-        <p class="capture-11">Creative Template</p>
-        <p class="capture-22">Welcome to MoGo</p>
+        <h1 class="capture-11">Creative Template</h1>
+        <h2 class="capture-22">Welcome to MoGo</h2>
         <a class="capture-button" href="#">Learn more</a>
     </header>
 
     <main class="item-block">
-        <p class="capture-1">We work with</p>
-        <p class="capture-2">amazing services</p>
-        <span class="caption-line"></span>
-
+        <h2 class="capture-1">We work with</h2>
+        <h3 class="capture-2">amazing services</h3>
 
         <ul class="icon-list">
-            <li class="icon-list__item icon-alarm">
+            <li class="icon-list__item">
+                <span class="icon-list__icon icon-ALARM icon-ALARM-dims"></span>
                  <div class="icon-list__capture">Photography</div>
                  <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icon-list__item icon-line-graphe">
+            <li class="icon-list__item">
+                <span class="icon-list__icon icon-BOOK icon-BOOK-dims"></span>
                 <div class="icon-list__capture">Web Design</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icon-list__item icon-computer">
+            <li class="icon-list__item">
+                <span class="icon-list__icon icon-HOME icon-HOME-dims"></span>
                 <div class="icon-list__capture">Creativity</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icon-list__item icon-book2">
+            <li class="icon-list__item">
+                <span class="icon-list__icon icon-IMAGE icon-IMAGE-dims"></span>
                 <div class="icon-list__capture">SEO</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icon-list__item icon-home">
+            <li class="icon-list__item">
+                <span class="icon-list__icon icon-LINEGRAPH icon-LINEGRAPH-dims"></span>
                 <div class="icon-list__capture">CSS/HTML</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
-            <li class="icon-list__item icon-image">
+            <li class="icon-list__item">
+                <span class="icon-list__icon icon-OK icon-OK-dims"></span>
                 <div class="icon-list__capture">Digital</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
         </ul>
-        <p class="capture-1">Who we are</p>
-        <p class="capture-2">meet our team</p>
-        <span class="caption-line"></span>
+        <h2 class="capture-1">Who we are</h2>
+        <h3 class="capture-2">meet our team</h3>
+
         <div class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet incidunt ipsum soluta sunt accusantium aliquam quos quia, quas necessitatibus consectetur dolore accusamus ex provident cum cumque ut libero corrupti.</div>
         <ul class="team">
             <li class="team__card-boys">
@@ -120,7 +124,7 @@
 <footer class="footer">
     <div class="footer__inner">
       <div class="copyright">&copy; 2016 MoGo free PSD template by <a href="#">Laaqiq</a></div>
-      <div class="subscribe"><input type="text" value="Your Email"><button class="rectangle">subscribe</button></div>
+      <div class="subscribe"><input type="text" placeholder="Your Email"><button class="rectangle">subscribe</button></div>
     </div>
 </footer>
 </html>
