--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -37,32 +37,32 @@
 
         <ul class="icon-list">
             <li class="icon-list__item">
-                <span class="icon-list__icon icon-ALARM icon-ALARM-dims"></span>
+                <span class="icon-list__icon icon-alarm icon-alarm-dims"></span>
                  <div class="icon-list__capture">Photography</div>
                  <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
             <li class="icon-list__item">
-                <span class="icon-list__icon icon-BOOK icon-BOOK-dims"></span>
+                <span class="icon-list__icon icon-book icon-book-dims"></span>
                 <div class="icon-list__capture">Web Design</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
             <li class="icon-list__item">
-                <span class="icon-list__icon icon-HOME icon-HOME-dims"></span>
+                <span class="icon-list__icon icon-home icon-home-dims"></span>
                 <div class="icon-list__capture">Creativity</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
             <li class="icon-list__item">
-                <span class="icon-list__icon icon-IMAGE icon-IMAGE-dims"></span>
+                <span class="icon-list__icon icon-image icon-image-dims"></span>
                 <div class="icon-list__capture">SEO</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
             <li class="icon-list__item">
-                <span class="icon-list__icon icon-LINEGRAPH icon-LINEGRAPH-dims"></span>
+                <span class="icon-list__icon icon-linegraphe icon-linegraphe-dims"></span>
                 <div class="icon-list__capture">CSS/HTML</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
             <li class="icon-list__item">
-                <span class="icon-list__icon icon-OK icon-OK-dims"></span>
+                <span class="icon-list__icon icon-ok icon-ok-dims"></span>
                 <div class="icon-list__capture">Digital</div>
                 <div class="icon-list__text-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, maiores!</div>
             </li>
